I do not know what im doing.

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,7 @@
     <title>Multiplayer Game</title>
 </head>
 <body>
-    <h1>Welcome to Multiplayer Game</h1>
-    <p>Enjoy playing with your friends!</p>
-    <button id="updateButton">TEST</button>
+    <canvas id="canvas" width="500" height="500"></canvas>
     <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"></script>
     <script src="client.js"></script>
 </body>
